platform/flux-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-notification-controller-webhook
  namespace: flux-system
spec:
  selector:
    app: notification-controller
  ports:
    - name: http-webhook
      port: 80
      targetPort: http-webhook
