platform/flux-webhook/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webhook-flux-http-tls
  namespace: flux-system
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`webhook.flux.${gke_cluster_name}.kfirs.com`)
      middlewares:
        - name: ip-whitelist
          namespace: traefik
      services:
        - kind: Service
          name: webhook-receiver
          port: http
  tls:
    secretName: webhook-flux-kfirs-com-tls
